@@ -2,3 +2,4 @@ C.J. Collier <cjcollier@colliertech.org> - examples/pick-object, examples/lwo
 Alp Toker
 Remy Fenn
 Nick <Xedecimal@gmail.com>
+Sam Hocevar
