@@ -90,13 +90,13 @@ namespace GtkGL {
 		}
 		
 		struct hitStruct {
-			public uint numNames;
+			public int numNames;
 			public double minZ;
 			public double maxZ;
-			public uint[] nameStack;
+			public int[] nameStack;
 		}
 
-		void processHits (int hits, uint[] buffer)
+                void processHits (int hits, int[] buffer)
 		{
 			uint i, j=0;
 			uint names, minZ, maxZ, numberOfNames;
@@ -115,8 +115,8 @@ namespace GtkGL {
 				// Console.WriteLine("Hit occured between [{0} .. {1}]", hit.minZ, hit.maxZ);
 				
 				// Allocate some space for our hit names
-				hit.nameStack = new uint[hit.numNames];
-				
+                                hit.nameStack = new int[hit.numNames];
+
 				for(int k = 0; k < hit.numNames; k++){
 					hit.nameStack[k] = buffer[j++];
 					
@@ -177,7 +177,8 @@ namespace GtkGL {
 				}
 				
 				// Establish a buffer for selection mode values
-				uint[] selectBuf = new uint[64];
+                                int[] selectBuf = new int[64];
+
 				// http://www.mevis.de/opengl/glSelectBuffer.html
 				gl.glSelectBuffer (64, selectBuf);
 				
